exports[`test Empty string 1`] = `<View />`;

exports[`test Paragraph of text 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22
        }
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={null}
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 22
          }
        ]
      }>
      Hey!
    </Text>
    
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22
        }
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={null}
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 22
          }
        ]
      }>
      This is a multi-paragraph message
    </Text>
  </Text>
</View>
`;

exports[`test Short text 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={undefined}
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22
        }
      ]
    }>
    Hi there!
  </Text>
</View>
`;

exports[`test Simple link 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22
        }
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function anonymous]}
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 22
          },
          Object {
            "color": "#09f",
            "fontWeight": "600"
          }
        ]
      }>
      Test link
    </Text>
  </Text>
</View>
`;
